--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&family=Crimson+Text:wght@400;600;700&family=EB+Garamond:wght@400;500;600;700;800&family=Forum&family=Inter:wght@100..900&family=Pacifico&family=Permanent+Marker&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -17,12 +19,12 @@
                     <img src="logo.png" alt="">
                 </div>
                 <div class="links">
-                    <a href="">home</a>
-                    <a href="">about us</a>
+                    <a href="index.html">home</a>
+                    <a href="about.html">about us</a>
                     <a href="">products</a>
                 </div>
                 <div class="cta">
-                    <a href="">contact us</a>
+                    <a href="contact.html">contact us</a>
                 </div>
             </nav>
             <div class="hero">
@@ -183,6 +185,33 @@
                 <a href="" >all products</a>
             </div>
         </section>
+
+        <section class="contact">
+            <div class="container">
+                <h1>Give your loved ones a gift to remember.</h1>
+                <a href="contact.html">stay connected <span><i class="ri-arrow-right-line"></i></span></a>
+            </div>
+        </section>
+
+        <footer>
+            <div class="left">
+                <div class="logo">
+                    <img src="footer-logo.png" alt="">
+                </div>
+                <p>Empowering individuals to embrace their unique beauty and radiate confidence through our cutting-edge products and personalized solutions.</p>
+                <div class="social">
+                    <i class="ri-facebook-circle-fill"></i>
+                    <i class="ri-instagram-fill"></i>
+                </div>
+            </div>
+            <div class="right">
+                <div class="links">
+                    <a href="index.html">home</a>
+                    <a href="about.html">about us</a>
+                    <a href="">products</a>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
