--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="links">
                     <a href="index.html">home</a>
                     <a href="about.html">about us</a>
-                    <a href="">products</a>
+                    <a href="product.html">products</a>
                 </div>
                 <div class="cta">
                     <a href="contact.html">contact us</a>
@@ -42,7 +42,7 @@
                 <h1>natural and certified</h1>
                 <h1>organic skincare</h1>
                 <div class="cta">
-                    <a href="">about us</a>
+                    <a href="about.html">about us</a>
                 </div>
             </div>
             <div class="center-img">
@@ -182,7 +182,7 @@
                
             </div>
             <div class="cta">
-                <a href="" >all products</a>
+                <a href="product.html" >all products</a>
             </div>
         </section>
 
@@ -206,9 +206,9 @@
             </div>
             <div class="right">
                 <div class="links">
-                    <a href="index.html">home</a>
+                    <a href="contact.html">contact</a>
                     <a href="about.html">about us</a>
-                    <a href="">products</a>
+                    <a href="product.html">products</a>
                 </div>
             </div>
         </footer>
