responsive till desc section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                 <div class="cta">
                     <a href="contact.html">contact us</a>
                 </div>
+                <div class="menu">
+                    <i class="ri-menu-line"></i>
+                    <div class="inner">
+                        <a href="index.html">home</a>
+                    <a href="about.html">about us</a>
+                    <a href="contact.html">contact us</a>
+                    </div>
+                </div>
             </nav>
             <div class="hero">
                 <h1>embrace the power of nature</h1>
