--- a/about.html
+++ b/about.html
@@ -15,7 +15,9 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="footer-logo.png" alt="">
+                <a href="index.html">
+                    <img src="footer-logo.png" alt="">
+                </a>
             </div>
             <div class="links">
                 <a href="index.html">home</a>
@@ -24,6 +26,10 @@
             </div>
             <div class="cta">
                 <a href="contact.html">contact us</a>
+            </div>
+            <div class="menu">
+                <i class="ri-menu-line"></i>
+              
             </div>
         </nav>
     </header>
