--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <section class="home">
             <nav>
                 <div class="logo">
+                   <a href="index.html">
                     <img src="logo.png" alt="">
+                   </a>
                 </div>
                 <div class="links">
                     <a href="index.html">home</a>
@@ -28,11 +30,7 @@
                 </div>
                 <div class="menu">
                     <i class="ri-menu-line"></i>
-                    <div class="inner">
-                        <a href="index.html">home</a>
-                    <a href="about.html">about us</a>
-                    <a href="contact.html">contact us</a>
-                    </div>
+                  
                 </div>
             </nav>
             <div class="hero">
