--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
         <div class="inner">
             <h6>email</h6>
-            <h5>info@info.com</h5>
+            <h5>arinrao83@gmail.com</h5>
         </div>
 
         <div class="inner">
@@ -57,7 +57,7 @@
 
         <div class="inner">
             <h6>phone</h6>
-            <h5>+383 49 647 164</h5>
+            <h5>+437 599 8271</h5>
         </div>
     </section>
 
