--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="grid">
                 <div class="box">
                     <div class="img">
-                        <img src="https://assets-global.website-files.com/6225124294ffc65d09d2d57f/644dbcaca95f112f7f978372_green%20clay.jpg" alt="">
+                        <img src="https://m.media-amazon.com/images/I/71VWAAn35VL._AC_UL640_FMwebp_QL65_.jpg" alt="">
                     </div>
                   <div class="txt">
                     <h6>face</h6>
@@ -111,7 +111,7 @@
 
                 <div class="box">
                     <div class="img">
-                        <img src="https://assets-global.website-files.com/6225124294ffc65d09d2d57f/644dbcacdd1f0959332ccffd_foot%20balm.jpg" alt="">
+                        <img src="https://m.media-amazon.com/images/I/71AvLfPrW8L._AC_UL640_FMwebp_QL65_.jpg" alt="">
                     </div>
                   <div class="txt">
                     <h6>feet</h6>
@@ -122,7 +122,7 @@
 
                 <div class="box">
                     <div class="img">
-                        <img src="https://assets-global.website-files.com/6225124294ffc65d09d2d57f/644db6512d59bb5a660ce41b_serum%20cremeri.jpg" alt="">
+                        <img src="https://m.media-amazon.com/images/I/41h3gSBFAfL._AC_UL640_FMwebp_QL65_.jpg" alt="">
                     </div>
                    <div class="txt">
                     <h6>face</h6>
@@ -133,7 +133,7 @@
 
                 <div class="box">
                     <div class="img">
-                        <img src="https://assets-global.website-files.com/6225124294ffc65d09d2d57f/644dbcabe4f0185799750f77_body%20oil.jpg" alt="">
+                        <img src="https://m.media-amazon.com/images/I/61gSqQN38eL._AC_UL640_FMwebp_QL65_.jpg" alt="">
                     </div>
                    <div class="txt">
                     <h6>body</h6>
@@ -144,7 +144,7 @@
 
                 <div class="box">
                     <div class="img">
-                        <img src="https://assets-global.website-files.com/6225124294ffc65d09d2d57f/644dbcacb1f58681862c3a93_day%20cream.jpg" alt="">
+                        <img src="https://m.media-amazon.com/images/I/71dat0p7VpL._AC_UL640_FMwebp_QL65_.jpg" alt="">
                     </div>
                    <div class="txt">
                     <h6>face</h6>
@@ -155,7 +155,7 @@
 
                 <div class="box">
                     <div class="img">
-                        <img src="https://assets-global.website-files.com/6225124294ffc65d09d2d57f/644dbcab2d59bbb21b0d2653_avocado%20eye%20cream2.jpg" alt="">
+                        <img src="https://m.media-amazon.com/images/I/41-Zq0lRcbL._AC_UL640_FMwebp_QL65_.jpg" alt="">
                     </div>
                     <div class="txt">
                         <h6>face</h6>
@@ -166,7 +166,7 @@
 
                 <div class="box">
                     <div class="img">
-                        <img src="https://assets-global.website-files.com/6225124294ffc65d09d2d57f/644dbcacdd1f09de512ccffe_hibiscus%20mask.jpg" alt="">
+                        <img src="https://m.media-amazon.com/images/I/81mtyXSPkRL._AC_UL640_FMwebp_QL65_.jpg" alt="">
                     </div>
                    <div class="txt">
                     <h6>face</h6>
@@ -177,7 +177,7 @@
 
                 <div class="box">
                     <div class="img">
-                        <img src="https://assets-global.website-files.com/6225124294ffc65d09d2d57f/644dbcace33c8d69208fc8ca_hard%20lotion.jpg" alt="">
+                        <img src="https://m.media-amazon.com/images/I/61OVSTfP-2L._AC_UL640_FMwebp_QL65_.jpg" alt="">
                     </div>
                   <div class="txt">
                     <h6>body</h6>
