--- a/product.html
+++ b/product.html
@@ -42,7 +42,7 @@
         <div class="grid">
             <div class="box">
                 <div class="img">
-                    <img src="https://assets-global.website-files.com/6225124294ffc65d09d2d57f/644dbcaca95f112f7f978372_green%20clay.jpg" alt="">
+                    <img src="https://m.media-amazon.com/images/I/71VWAAn35VL._AC_UL640_FMwebp_QL65_.jpg" alt="">
                 </div>
               <div class="txt">
                 <h6>face</h6>
@@ -53,7 +53,7 @@
 
             <div class="box">
                 <div class="img">
-                    <img src="https://assets-global.website-files.com/6225124294ffc65d09d2d57f/644dbcacdd1f0959332ccffd_foot%20balm.jpg" alt="">
+                    <img src="https://m.media-amazon.com/images/I/71AvLfPrW8L._AC_UL640_FMwebp_QL65_.jpg" alt="">
                 </div>
               <div class="txt">
                 <h6>feet</h6>
@@ -64,7 +64,7 @@
 
             <div class="box">
                 <div class="img">
-                    <img src="https://assets-global.website-files.com/6225124294ffc65d09d2d57f/644db6512d59bb5a660ce41b_serum%20cremeri.jpg" alt="">
+                    <img src="https://m.media-amazon.com/images/I/41h3gSBFAfL._AC_UL640_FMwebp_QL65_.jpg" alt="">
                 </div>
                <div class="txt">
                 <h6>face</h6>
