--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="contact.css">
+    <!-- <link rel="stylesheet" href="contact.css"> -->
+    <link rel="stylesheet" href="style.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,25 +17,25 @@
         <nav>
             <div class="logo">
                 <a href="index.html">
-                    <img src="footer-logo.png" alt="">
+                    <img src="logo/footer-logo.png" alt="">
                 </a>
             </div>
-            <div class="links">
+            <div class="links-index">
                 <a href="index.html">home</a>
                 <a href="about.html">about us</a>
                 <a href="product.html">products</a>
             </div>
-            <div class="cta">
+            <div class="cta-index">
                 <a href="contact.html">contact us</a>
             </div>
-            <div class="menu">
+            <div class="menu-index">
                 <i class="ri-menu-line"></i>
               
             </div>
         </nav>
     </header>
 
-    <section class="text">
+    <section class="text-contact">
         <div class="heading">
             <h1>Contact Us</h1>
             <h6>get in touch let's talk..</h6>
@@ -64,7 +65,7 @@
     <footer>
         <div class="left">
             <div class="logo">
-                <img src="footer-logo.png" alt="">
+                <img src="logo/footer-logo.png" alt="">
             </div>
             <p>Empowering individuals to embrace their unique beauty and radiate confidence through our cutting-edge products and personalized solutions.</p>
             <div class="social">
