--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
             <nav>
                 <div class="logo">
                    <a href="index.html">
-                    <img src="logo.png" alt="">
+                    <img src="logo/logo.png" alt="">
                    </a>
                 </div>
-                <div class="links">
+                <div class="links-index">
                     <a href="index.html">home</a>
                     <a href="about.html">about us</a>
                     <a href="product.html">products</a>
                 </div>
-                <div class="cta">
+                <div class="cta-index">
                     <a href="contact.html">contact us</a>
                 </div>
-                <div class="menu">
+                <div class="menu-index">
                     <i class="ri-menu-line"></i>
                   
                 </div>
@@ -41,8 +41,8 @@
 
         <section class="about">
             <div class="leaves1">
-                <img src="leaf-l.png" alt="">
-                <img src="leaf-r.png" alt="">
+                <img src="./images/leaf-l.png" alt="">
+                <img src="./images/leaf-r.png" alt="">
             </div>
             <div class="hero">
                 <h1>natural and certified</h1>
@@ -52,12 +52,12 @@
                 </div>
             </div>
             <div class="center-img">
-                <img src="center-l.jpeg" alt="">
-                <img src="center-r.jpeg" alt="">
+                <img src="./images/center-l.jpeg" alt="">
+                <img src="./images/center-r.jpeg" alt="">
             </div>
             <div class="leaves2">
-                <img src="leaf-l.png" alt="">
-                <img src="leaf-r.png" alt="">
+                <img src="./images/leaf-l.png" alt="">
+                <img src="./images/leaf-r.png" alt="">
             </div>
         </section>
 
@@ -92,7 +92,7 @@
             </div>
         </section>
 
-        <section class="products">
+        <section class="products-index">
             <div class="heading">
                 <h1>products</h1>
                 <h6>healthy skin. healthy you.</h6>
@@ -202,7 +202,7 @@
         <footer>
             <div class="left">
                 <div class="logo">
-                    <img src="footer-logo.png" alt="">
+                    <img src="logo/footer-logo.png" alt="">
                 </div>
                 <p>Empowering individuals to embrace their unique beauty and radiate confidence through our cutting-edge products and personalized solutions.</p>
                 <div class="social">
