--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="about.css"> -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Css/style.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
